
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int FALSE ;
 int TRUE ;
 short strlen (char const*) ;

int strBeginsWith(const char *needle, const char *haystack)
{
 short int x;

 if ( strlen(needle) > strlen(haystack) )
  return FALSE;

 for ( x = 0 ; x < strlen(needle) ; x++ )
 {
  if ( needle[x] != haystack[x] )
   return FALSE;
 }

 return TRUE;
}
